This file documents the revision history for the Monitoring Webinterface Thruk.

1.78-3   Sat Nov  2 00:45:00 CET 2013
          - Business Process
            - fixed saving graph direction
            - fixed edge layout for left-right graphs
            - fixed submiting results in test mode
          - Panorama
            - fixed not saving when starting with an empty set
          - Shinken
            - fixed livestatus error when using wrong business impact filter

1.78-2   Sun Oct 27 16:41:56 CET 2013
          - Business Process
            - openend result spool files permissons
          - Config Tool
            - fixed plugin help accordion size
          - Panorama
            - fixed nagvis panel displaying load error
            - fixed using default view with readonly mode
            - fixed draggable panels in readonly mode
          - Bug Fixes
            - fixed cascaded configs for sub components
            - fixed perfbars with zero values (awiddersheim)
            - fixed listing recurring downtimes with limited permissions

1.78     Thu Oct 21 22:41:31 CEST 2013
          - added business process addon
          - new --all-inclusive/-i mode for cli html page export which includes all css, js and
            images in one single page
          - show apache status in performance page
          - minemap performance improvements and reduced memory usage
          - configuration git browser got next and previous links
          - added some more shinken specific config attributes
          - memory usage / performance improvements with large data
          - replace caching module with internal module
          - panorama
            - added business process panel
            - added nagvis panel
          - Bug Fixes
            - summary: fixed reports using host/servicegroups in combination with the mysql logcache
            - mysql logcache: fixed service cannot be NULL error on import