@@ -760,6 +760,11 @@ plugins/plugins-available/panorama/root/images/html_add.png
 plugins/plugins-available/panorama/root/images/image_edit.png
 plugins/plugins-available/panorama/root/images/information.png
 plugins/plugins-available/panorama/root/images/minemap.png
+plugins/plugins-available/panorama/root/images/minemap0.png
+plugins/plugins-available/panorama/root/images/minemap1.png
+plugins/plugins-available/panorama/root/images/minemap2.png
+plugins/plugins-available/panorama/root/images/minemap3.png
+plugins/plugins-available/panorama/root/images/minemap4.png
 plugins/plugins-available/panorama/root/images/modgearman.png
 plugins/plugins-available/panorama/root/images/new.png
 plugins/plugins-available/panorama/root/images/new_tab.gif
