@@ -140,23 +140,25 @@ DIV.mine_map_state0, DIV.mine_map_state1, DIV.mine_map_state2, DIV.mine_map_stat
   -moz-border-radius: 3px;
 }
 DIV.mine_map_state0 {
-  /*http://ie.microsoft.com/testdrive/graphics/cssgradientbackgroundmaker/
-    background: #00FF33;*/
-    /* IE10 Consumer Preview */
-    background-image: -ms-radial-gradient(center, circle closest-corner, #00FF33 0%, #00991F 100%);
-    /* Mozilla Firefox */
-    background-image: -moz-radial-gradient(center, circle closest-corner, #00FF33 0%, #00991F 100%);
-    /* Opera */
-    background-image: -o-radial-gradient(center, circle closest-corner, #00FF33 0%, #00991F 100%);
-    /* Webkit (Safari/Chrome 10) */
-    background-image: -webkit-gradient(radial, center center, 0, center center, 497, color-stop(0, #00FF33), color-stop(1, #00991F));
-    /* Webkit (Chrome 11+) */
-    background-image: -webkit-radial-gradient(center, circle closest-corner, #00FF33 0%, #00991F 100%);
-    /* W3C Markup, IE10 Release Preview */
-    background-image: radial-gradient(circle closest-corner at center, #00FF33 0%, #00991F 100%);
+  /*http://ie.microsoft.com/testdrive/graphics/cssgradientbackgroundmaker/ */
+  /*background: #00FF33;*/
+  background-image: url(images/minemap0.png);
+  /* IE10 Consumer Preview */
+  background-image: -ms-radial-gradient(center, circle closest-corner, #00FF33 0%, #00991F 100%);
+  /* Mozilla Firefox */
+  background-image: -moz-radial-gradient(center, circle closest-corner, #00FF33 0%, #00991F 100%);
+  /* Opera */
+  background-image: -o-radial-gradient(center, circle closest-corner, #00FF33 0%, #00991F 100%);
+  /* Webkit (Safari/Chrome 10) */
+  background-image: -webkit-gradient(radial, center center, 0, center center, 497, color-stop(0, #00FF33), color-stop(1, #00991F));
+  /* Webkit (Chrome 11+) */
+  background-image: -webkit-radial-gradient(center, circle closest-corner, #00FF33 0%, #00991F 100%);
+  /* W3C Markup, IE10 Release Preview */
+  background-image: radial-gradient(circle closest-corner at center, #00FF33 0%, #00991F 100%);
 }
 DIV.mine_map_state1 {
   /*background: #FFDE00;*/
+  background-image: url(images/minemap1.png);
   background-image: -ms-radial-gradient(center, circle closest-corner, #FFDE00 0%, #A69000 100%);
   background-image: -moz-radial-gradient(center, circle closest-corner, #FFDE00 0%, #A69000 100%);
   background-image: -o-radial-gradient(center, circle closest-corner, #FFDE00 0%, #A69000 100%);
@@ -166,6 +168,7 @@ DIV.mine_map_state1 {
 }
 DIV.mine_map_state2 {
   /*background: #FF5B33;*/
+  background-image: url(images/minemap2.png);
   background-image: -ms-radial-gradient(center, circle closest-corner, #FF5533 0%, #A33A21 100%);
   background-image: -moz-radial-gradient(center, circle closest-corner, #FF5533 0%, #A33A21 100%);
   background-image: -o-radial-gradient(center, circle closest-corner, #FF5533 0%, #A33A21 100%);
@@ -175,6 +178,7 @@ DIV.mine_map_state2 {
 }
 DIV.mine_map_state3 {
   /*background: #FF9E00;*/
+  background-image: url(images/minemap3.png);
   background-image: -ms-radial-gradient(center, circle closest-corner, #FF9E00 0%, #AD6B00 100%);
   background-image: -moz-radial-gradient(center, circle closest-corner, #FF9E00 0%, #AD6B00 100%);
   background-image: -o-radial-gradient(center, circle closest-corner, #FF9E00 0%, #AD6B00 100%);
@@ -184,6 +188,7 @@ DIV.mine_map_state3 {
 }
 DIV.mine_map_state4 {
   /*background: #ACACAC;*/
+  background-image: url(images/minemap4.png);
   background-image: -ms-radial-gradient(center, circle closest-corner, #CFCFCF 0%, #525252 100%);
   background-image: -moz-radial-gradient(center, circle closest-corner, #CFCFCF 0%, #525252 100%);
   background-image: -o-radial-gradient(center, circle closest-corner, #CFCFCF 0%, #525252 100%);
