@@ -186,6 +186,7 @@ TP.render_plugin_output = function(v, td, item) {
     }
     if(item.data.long_plugin_output) {
         var long_plugin_output     = item.data.long_plugin_output.replace(/"/g, "&quot;");
+        long_plugin_output     = long_plugin_output.replace(/'/g, "");
         long_plugin_output     = long_plugin_output.replace(/\\n/g, "<br>");
         long_plugin_output     = long_plugin_output.replace(/(\r\n|\n|\r)/gm,"");
         long_plugin_output     = long_plugin_output.replace(/&/g, "&amp;");
