@@ -1,5 +1,9 @@
 This file documents the revision history for the Monitoring Webinterface Thruk.
 
+next:
+          - Panorama
+            - added experimental IE support
+
 1.78-3   Sat Nov  2 00:45:00 CET 2013
           - Business Process
             - fixed saving graph direction
